--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<h1>Why I want to become a developer?</h1>
-	<p>The answer to the question should be wrapped in a paragraph tag. The text content must have a length greater than 0.</p>
+	<p>Software developers must be creative and original in their approach if they are to create useful software solutions. To solve challenging situations, they must be able to think creatively and generate fresh concepts and strategies.</p>
     <script type="text/javascript" src="./script.js">
 </script>
 
